# xiaozhi_app_module

./: README.md  pyproject.toml
src/xiaozhi_app/: __init__.py  config.py
src/xiaozhi_app/android/: __init__.py  api.py
src/xiaozhi_app/core/: __init__.py  core.py
src/xiaozhi_app/plugins/: __init__.py  android.py
src/xiaozhi_app/rpc/: client.py
src/xiaozhi_app/utils/: __init__.py  connection.py  network_manager.py
